crates/oxc_react_compiler/tests/snapshots/valid-explicit-arguments-annex-b-innermost-block.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/valid-explicit-arguments-annex-b-innermost-block.js
---
const { c: _c } = require("react/compiler-runtime");
// @script
function Component() {
	const $ = _c(2);
	let result;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		function arguments() {
			return "inner";
		}
		result = arguments();
		function arguments() {
			return "outer";
		}
		$[0] = result;
	} else {
		result = $[0];
	}
	let t0;
	if ($[1] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = <div>{result}</div>;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: []
};
