crates/oxc_react_compiler/tests/snapshots/valid-explicit-arguments-annex-b-labeled-break-after-declaration.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/valid-explicit-arguments-annex-b-labeled-break-after-declaration.js
---
const { c: _c } = require("react/compiler-runtime");
// @script
function Component(value) {
	const $ = _c(4);
	let t0;
	if ($[0] !== value) {
		function arguments(input) {
			return input;
		}
		t0 = arguments(value);
		$[0] = value;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	let t1;
	if ($[2] !== t0) {
		t1 = <div>{t0}</div>;
		$[2] = t0;
		$[3] = t1;
	} else {
		t1 = $[3];
	}
	return t1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: ["hello"]
};
