crates/oxc_react_compiler/tests/snapshots/valid-explicit-arguments-annex-b-overwrites-body-function.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/valid-explicit-arguments-annex-b-overwrites-body-function.js
---
const { c: _c } = require("react/compiler-runtime");
// @script
function Component() {
	const $ = _c(2);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = function arguments() {
			return "inner";
		};
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	const arguments_0 = t0;
	let t1;
	if ($[1] === Symbol.for("react.memo_cache_sentinel")) {
		t1 = <div>{arguments_0()}</div>;
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	return t1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: []
};
