crates/oxc_react_compiler/tests/snapshots/valid-explicit-arguments-enum.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/valid-explicit-arguments-enum.ts
---
// @script
enum arguments {
	value
}
const Component = () => {
	return arguments.value;
};
